Add link on changer if chager_route is configured

--- a/src/Resources/views/Audit/entity_history.html.twig
+++ b/src/Resources/views/Audit/entity_history.html.twig
@@ -36,7 +36,7 @@
                             </div>
                             <div class="timeline-label">
                                 <div class="row">
-                                    <div class="col-lg-11"><h2 class="mb-0">{{ helper.humanize(entity, entry) }}</h2>
+                                    <div class="col-lg-11"><h2 class="mb-0">{{ helper.humanize(entity, entry, changer_route) }}</h2>
                                     </div>
                                     <div class="col-lg-1"
                                          align="center">{{ helper.badge(entry.type, entry.type|audi_label_type) }}</div>
