--- a/src/Resources/views/Audit/entity_history.html.twig
+++ b/src/Resources/views/Audit/entity_history.html.twig
@@ -54,7 +54,7 @@
                                                 <td><code>{{ key }}</code></td>
                                                 <td>
                                                     {% if values.old is defined %}
-                                                        {% if values.old is empty %}
+                                                        {% if values.old is null %}
                                                             {{ helper.badge('null', 'secondary') }}
                                                         {% else %}
                                                             {{ helper.text(helper.dump(values.old), 'danger') }}
@@ -63,10 +63,10 @@
                                                 </td>
                                                 <td>
                                                     {% if values.new is defined %}
-                                                        {% if values.new is empty %}
+                                                        {% if values.new is null %}
                                                             {{ helper.badge('null', 'secondary') }}
                                                         {% else %}
-                                                            {% if values.old is empty %}
+                                                            {% if values.old is null %}
                                                                 {{ helper.text(helper.dump(values.new), 'primary') }}
                                                             {% else %}
                                                                 {{ helper.text(helper.dump(values.new), 'success') }}
